Implementação de localização automática

--- a/config.env
+++ b/config.env
@@ -10,3 +10,4 @@ PATH_CSS_APP=css/app.css
 PATH_CSS_CARDS=css/cards.css
 PATH_CSS_FOOTER=css/footer.css
 SERPER_API_KEY=ad5dca4b2eb7acb74b44360835ea1d21c031fd19
+SERPER_URL_API=https://google.serper.dev/maps
